# prod-egosumpico

./: .gitmodules  FILE_ID.DIZ  LICENSE  egosumpico.uf2
egosumpico/: CMakeLists.txt
egosumpico/data/: audio.h
egosumpico/src/: main.c
prototype/: index.html
